:zap: perf: ensure text remains visible during webfont load

--- a/assets/main/sass/main.scss
+++ b/assets/main/sass/main.scss
@@ -32,6 +32,7 @@
     font-family: 'Source Sans Pro';
     font-style: normal;
     font-weight: 900;
+    font-display: swap;
     src: local(''),
     url('../fonts/source-sans-pro-v21-latin-900.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
     url('../fonts/source-sans-pro-v21-latin-900.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -41,6 +42,7 @@
     font-family: 'Source Sans Pro';
     font-style: italic;
     font-weight: 900;
+    font-display: swap;
     src: local(''),
     url('../fonts/source-sans-pro-v21-latin-900italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
     url('../fonts/source-sans-pro-v21-latin-900italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
